# TANUH-DPI

./: .gitignore  DEPLOY_FORGENSIC_GCP_VM.md  README_ForgeryDetection.md  README_Terminal_Instructins.md  docker-compose.yml
.github/workflows/: build-desktop.yml  build-forgensic-desktop.yml  build-privacy-filter-desktop.yml  build-privacy-filter-executables.yml
common/: config.py
forgensic/: Dockerfile  celery_app.py  forgensic_gui.py  requirements.txt  setup.iss  tasks.py
forgensic/app/: auth.py  config.py  main.py  utils.py
frontend/: httpd.conf  index.html
frontend/assets/: API_DOCS.md  home-modern.css  style.css
frontend/assets/js/: apiaccess.js  dashboard.js  forgery.js  main.js
frontend/docs/: index.html
frontend/tabs/: about.html  apiaccess.html  clinical.html  dashboard.html  forgery.html  home.html  insurance.html  privacyfilter.html
nhcx-local/src/nhcx_local/: classifier.py
pdf2abdm/: tasks.py
pdf2abdm/app/: main.py
pdf2abdm/utils/: llm_requirements.py
pdf2nhcx/: tasks.py
pdf2nhcx/app/: main.py
pdf2nhcx/utils/: llm_requirements.py  nhcx_assembler.py
privacy-filter-local/: .gitignore  build_appimage.sh  build_executable.sh  pf-redact.spec  pyproject.toml  setup.cfg
privacy-filter-local/appimage/: AppRun  pf-redact.desktop
privacy-filter-local/src/pf_local/: __init__.py  cli.py  model.py  ner_model.py  redactor.py  rule_detectors.py
privacy-filter-local/src/pf_local/extractors/: dicom.py  docx.py  image.py  pdf.py  txt.py
privacy_filter/app/: main.py
session_logger/app/: main.py
