[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pf-local"
version = "1.0.0"
description = "Local CLI tool for redacting PII from documents using ML models"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "TANUH Team"},
]
keywords = ["privacy", "pii", "redaction", "nlp", "ner"]

dependencies = [
    "click>=8.0",
    "transformers>=4.40",
    "safetensors>=0.4",
    "torch>=2.0",
    "Pillow>=10.0",
    "pytesseract>=0.3",
    "PyMuPDF>=1.24",
    "python-docx>=1.0",
    "pydicom>=2.4",
    "numpy>=1.24",
]

[project.scripts]
pf-redact = "pf_local.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pf_local*"]
