[metadata]
name = pf-local
version = 1.0.0
description = Local CLI tool for redacting PII from documents using ML models
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = TANUH Team
keywords = privacy, pii, redaction, nlp, ner

[options]
python_requires = >=3.10
package_dir =
    = src
packages = find:
install_requires =
    click>=8.0
    transformers>=4.40
    safetensors>=0.4
    torch>=2.0
    Pillow>=10.0
    pytesseract>=0.3
    PyMuPDF>=1.24
    python-docx>=1.0
    pydicom>=2.4
    numpy>=1.24

[options.packages.find]
where = src
include = pf_local*

[options.entry_points]
console_scripts =
    pf-redact = pf_local.cli:main
